--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="./main.js" defer></script>
+    <script type="text/javascript" src="../dist/main.js" defer></script>
     <title>Chess app</title>
   </head>
   <body>
     <div id="root"></div>
+    <div class="gameboard-wrapper"></div>
   </body>
 </html>
